web/global.css
li {
  margin: 0;
}
html,
body {
  font-family: var(--font-roboto);
}
body {
  background: #fff;
  margin: 0;
  padding: 0;
  color: #595959;
  font-size: 18.38px;
  font-weight: 300;
  line-height: 1.63;
}
/* font-family: "Raleway", "Helvetica Neue", "Segoe UI", "Helvetica", "Arial",
    sans-serif; */
img {
  margin-bottom: 0;
}

span.gatsby-resp-image-wrapper + em {
  /*border-bottom: 1px solid #e7e7e8;*/
  color: #626262;
  display: block;
  font-size: 0.75em;
  padding: 8px 0;
  text-align: center;
}

/* h1:after,
h2:after {
  border-bottom: 3px solid #c48449;
  content: "";
  display: block;
  height: 3px;
  width: 2em;
} */

/* h1, h2, h3, h4, h5 {font-family: } */
a:link,
a:visited {
  color: #b75906;
  text-decoration: none;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #246a73;
  font-family: var(--font-raleway);
  font-weight: 300;
}

h1,
h2,
h3,
p {
  margin-top: 0;
}

p + h2 {
  margin-top: 1.4em;
}

p,
ul,
span {
  font-family: var(--font-roboto);
}

h1 {
  margin-top: 2rem;
}

@media (min-width: 768px) {
  h1 {
    font-size: 2.625rem;
    margin-bottom: 0.5rem;
    margin-top: 0;
  }
}

.articleInner {
  margin: 0 auto;
  /* width: 100%; */
}

.articleInner figure {
  margin: 0 -0.3rem 1rem;
  max-width: 480px;
}

@media (min-width: 768px) {
  .articleInner {
    max-width: 885px;
  }
  .articleInner figure {
    max-width: 95vw;
    margin: 0 auto 1rem;
  }
}
/* @media (min-width: 1024px) {
  .articleInner {
    max-width: 1180px;
  }
} */

figure {
  position: relative;
}

figcaption:not(:empty) {
  background: rgba(0, 0, 0, 0.7);
  color: #fff;
  bottom: 12px;
  display: inline-block;
  font-family: var(--font-raleway);
  font-size: 0.8rem;
  left: 0;
  padding: 4px 6px;
  position: absolute;
}

@media (min-width: 768px) {
  /* figure {
    margin: 0 -5rem;
  } */
}

.videosWrapper {
  background: #f7f7f7;
  border-top: 1px solid #d7dade;
  border-bottom: 1px solid #d7dade;
  margin-top: 2rem;
  margin-bottom: 4rem;
}
.videosWrapper-inner {
  margin-left: auto;
  margin-right: auto;
  max-width: 1180px;
}

.col-wide {
  margin-left: auto;
  margin-right: auto;
  max-width: 1180px;
}

blockquote {
  border-left: 10px solid #d1c9c6;
  font-family: var(--font-roboto);
  font-size: 1.1em;
  font-style: italic;
  margin: 2rem 0;
  max-width: 700px;
  padding: 0 1rem;
}

.previewButton {
  background: orangered;
  border-radius: 8px;
  bottom: 20px;
  color: white;
  display: inline-block;
  padding: 8px 20px;
  position: fixed;
  right: 20px;
  z-index: 4;
}

a.previewButton:link,
a.previewButton:visited {
  color: white;
}

section {
  padding: 0 1rem 1rem;
}
@media (min-width: 1220px) {
  section {
    padding: 0 0 1rem;
  }
}

